--- a/GradeManagementApi/GradeManagementApi/appsettings.json
+++ b/GradeManagementApi/GradeManagementApi/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Default": "Server=.;Database=GradeManageDb;trusted_connection=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
